Changes after 1.0alpha2:

 - 