@@ -1,3 +1,4 @@
 Changes after 1.0alpha2:
 
- - 
+ - added check for SMTP, FTP, SSH, TELNET, WEB, POP3, and IMAP 
+   servers availability
